--- a/main.css
+++ b/main.css
@@ -744,7 +744,7 @@ li {
   display: block;
   background-color: var(--hColor);
   transition: 1s;
-  padding-top: 15vh;
+  padding-top: 10vh;
 }
 
 .mob-background {
@@ -774,12 +774,12 @@ li {
   width: 0vh;
   text-align: left;
   margin-left: 10vw;
-  margin-bottom: 7.2vh;
+  margin-bottom: 7vh;
   color: var(--accent);
 }
 
 .mobile-nav .title {
-  position: absolute;
+  position: sticky;
   display: flex;
   justify-content: space-between;
   align-items: left;
@@ -788,7 +788,7 @@ li {
   color: var(--white);
   font-weight: 500;
   font-size: calc(1vw + 1vh + 2vmin);
-  margin-top: 0.75vh;
+  top: 17vh;
 }
 
 iframe {
@@ -796,7 +796,8 @@ iframe {
   justify-content: space-between;
   align-items: left;
   margin-left: 50%;
-  margin-top: -65vh;
+  margin-top: -60vh;
+  height: 50vh;
 }
 
 .mobile-nav.is-active {
