--- a/main.css
+++ b/main.css
@@ -947,6 +947,8 @@ iframe {
   padding-left: 30%;
   color: var(--footer);
   border-top: 2px var(--black) solid;
+  z-index: 0;
+  background-color: white;
 }
 
 .projectimg {
