--- a/main.css
+++ b/main.css
@@ -444,7 +444,7 @@ button {
   display: flex;
   justify-content: space-between;
   top: 20vh;
-  margin-left: 101%;
+  margin-left: 98.5%;
   position: relative;
   -webkit-box-shadow: 0px 0px 24px 1px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 0px 24px 1px rgba(0, 0, 0, 0.25);
@@ -452,6 +452,32 @@ button {
 }
 
 .redcrypt-img {
+  width: 23vh;
+  height: 23vh;
+  display: flex;
+  justify-content: space-between;
+  right: 23vh;
+  top: 50vh;
+  position: relative;
+  -webkit-box-shadow: 0px 0px 24px 1px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 0px 24px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 0px 24px 1px rgba(0, 0, 0, 0.25);
+}
+
+.donut-img {
+  width: 23vh;
+  height: 23vh;
+  display: flex;
+  justify-content: space-between;
+  top: 20vh;
+  margin-left: 85%;
+  position: relative;
+  -webkit-box-shadow: 0px 0px 24px 1px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 0px 24px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 0px 24px 1px rgba(0, 0, 0, 0.25);
+}
+
+.hitech-img {
   width: 23vh;
   height: 23vh;
   display: flex;
