--- a/main.css
+++ b/main.css
@@ -722,7 +722,7 @@ li {
 .fa-linkedin:hover {
   color: #ff6b6b;
 }
-.fa-instagram:hover {
+.fa-envelope:hover {
   color: #ff6b6b;
 }
 .fa-github:hover {
