--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
   --black: #424242;
   --white: #fefdf8;
   --bg: white;
+  --pulse: black;
   --btn-colour: white;
   --icon: #424242;
   --btn-bg: #424242;
@@ -26,6 +27,7 @@
   --black: #424242;
   --white: #fefdf8;
   --bg: #121212;
+  --pulse: white;
   --icon: #cccccc;
   --btn-colour: white;
   --btn-bg: #424242;
@@ -224,7 +226,7 @@ button {
   font-size: calc(0.25vw + 0.25vh + 1vmin);
   line-height: calc(0.5vw + 2vh);
   color: var(--lblack);
-  max-width: 95%;
+  max-width: 65%;
   margin-left: 2vw;
 }
 
@@ -273,19 +275,58 @@ button {
   background-color: #ff6b6b;
 }
 
+.pulse {
+  width: calc(16vw + 16vh);
+  height: calc(16vw + 16vh);
+  background: var(--circle2);
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+}
+.pulse:before,
+.pulse:after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: var(--title);
+  border-radius: 50%;
+  z-index: -1;
+  opacity: 0.7;
+}
+.pulse:before {
+  animation: pulse 2s ease-out infinite;
+}
+.pulse:after {
+  animation: pulse 2s 1s ease-out infinite;
+}
+@keyframes pulse {
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
+
 .circlecontainer {
   display: flex;
   justify-content: space-between;
   align-items: left;
   position: relative;
-  margin-left: 20%;
+  margin-right: 10%;
 }
 
 #circle {
-  width: calc(22vw + 22vh);
-  height: calc(22vw + 22vh);
-  background-color: var(--unit);
+  position: absolute;
+  width: 85%;
+  height: 85%;
   border-radius: 50%;
+  background-color: black;
 }
 
 #small-circle0 {
@@ -328,9 +369,7 @@ button {
 }
 
 #kmlimg {
-  /* margin-top: 7.5%;
-  margin-left: 7.5%; */
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -344,7 +383,7 @@ button {
   justify-content: center;
   align-items: center;
   margin-top: 80vh;
-  right: 70%;
+  right: 30%;
   animation-name: floating;
   animation-duration: 2.25s;
   animation-iteration-count: infinite;
