--- a/main.css
+++ b/main.css
@@ -162,10 +162,10 @@ button {
     align-items: center;
     text-align: center;
     font-family: "Roboto", sans-serif;
-    color: var(--black);
+    color: var(--title);
     font-weight: 900;
     font-size: 5vw;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
@@ -180,10 +180,10 @@ button {
     align-items: center;
     text-align: center;
     font-family: "Roboto", sans-serif;
-    color: var(--black);
+    color: var(--title);
     font-weight: 300;
     font-size: 3vw;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
